fixed wrap

--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   justify-content: flex-end;
 
@@ -54,21 +54,28 @@
   }
 
   & .important {
-    position: absolute;
-    top: 15%;
+    margin-top: 5rem;
+    min-width: max-content;
+    max-width: 100%;
     background-color: rgba($color-black, 0.3);
     color: $color-white;
-    width: 90%;
     border-radius: 1rem;
     overflow: hidden;
 
     &__news {
-      display: flex;
-      width: 100%;
+      display: inline-flex;
       justify-content: space-around;
       animation: marquee-hor 15s cubic-bezier(1, 1, 1, 1) infinite;
       list-style: none;
       padding: 3px;
+
+      &>li {
+        display: inline-block;
+
+        &:not(:last-child) {
+          margin-right: 3rem;
+        }
+      }
 
       &:hover {
         animation-play-state: paused;
